# workspace

./: .gitignore  CLAUDE.md
gplaces_parser/: .dockerignore  .env.example  .gitignore  Dockerfile  FEEDBACK.md  Makefile  README.md  alembic.ini  pyproject.toml
gplaces_parser/migrations/: env.py
gplaces_parser/migrations/versions/: 0001_initial.py  0002_bilingual_queries.py  0003_english_columns.py  0004_name_nullable.py  0005_status_and_history.py  0006_roads.py  0007_search.py  0008_reviews_fts.py  0009_ar_normalize.py  0010_ar_ta_marbuta.py  0011_api_usage.py  0012_category_nullable.py
gplaces_parser/scripts/: bump-version.sh  changelog.sh  coverage_check.py  load_roads.py  reclassify.py
gplaces_parser/src/gplaces_parser/: categories.py  cli.py  config.py  db.py  districts.py  normalize.py  pipeline.py  repo.py  scraper.py  tiling.py
gplaces_parser/src/gplaces_parser/api/: deps.py  main.py  queries.py  review_search_queries.py  roads_queries.py  routes.py  schemas.py  search_queries.py  search_synonyms.py  usage.py
mcqs/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
mcqs/migrations/: env.py
mcqs/migrations/versions/: 0001_initial.py  0002_eight_options.py  0003_source_docs_content.py
mcqs/scripts/: bump-version.sh  changelog.sh  run-forever.sh
mcqs/src/mcqs/: __init__.py  chunker.py  cli.py  config.py  db.py  generate.py  ingest.py  prompts.py  subjects.py
mcqs/src/mcqs/api/: deps.py  main.py  queries.py  routes.py  schemas.py  usage.py
swet_cli/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONVENTIONS.md  FEEDBACK.md  Makefile  audit.toml  pyproject.toml
swet_cli/scripts/: audit.py  setup-portproxy-task.ps1  update-portproxy.bat  update-portproxy.ps1
swet_cli/src/swet_api/: __init__.py  app.py  config.py  db.py  engine.py  schemas.py
swet_cli/src/swet_api/auth/: dependencies.py  jwt.py  otp.py  providers.py  router.py  schemas.py
swet_cli/src/swet_api/routers/: assessments.py  attempts.py  bookmarks.py  dashboard.py  preferences.py  questions.py  reviews.py  sessions.py  stats.py
swet_cli/src/swet_api/services/: attempt_service.py  question_service.py
swet_cli/src/swet_cli/: __init__.py  adaptive.py  adaptive_db.py  assessment.py  audit_runner.py  competency_matrix.json  config.py  data.py  db.py  display.py  generator.py  grader.py  llm.py  main.py  models.py  prompts.py
swet_cli/src/swet_slack/: __init__.py  blocks.py  bot.py  config.py  db.py  engine.py  formatters.py
swet_cli/src/swet_slack/handlers/: assessment.py  question.py  session.py  setup.py  stats.py
swet_cli/src/swet_telegram/: __init__.py  bot.py  config.py  db.py  engine.py  formatters.py  keyboards.py
swet_cli/src/swet_telegram/handlers/: assessment.py  question.py  session.py  setup.py  stats.py
swet_cli/src/swet_whatsapp/: __init__.py  bot.py  config.py  db.py  engine.py  formatters.py
swet_cli/tests/: test_assessment.py  test_data.py  test_db.py  test_generator.py  test_grader.py
swet_cli/tests/test_api/: test_auth.py  test_db.py  test_e2e.py  test_engine.py
swet_cli/tests/test_slack/: test_blocks.py  test_db.py  test_engine.py  test_formatters.py
swet_cli/tests/test_telegram/: test_db.py  test_engine.py  test_formatters.py  test_keyboards.py
swet_cli/tests/test_whatsapp/: test_db.py  test_engine.py  test_formatters.py
swet_cli/web/: package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js
swet_cli/web/src/: app.css  app.html
swet_cli/web/src/lib/: assessment.ts
swet_cli/web/tests/: smoke.spec.ts
(+733 files in other folders)
