[project]
name = "gplaces-parser"
version = "0.1.0"
description = "Scrape Google Places and reviews for Riyadh via Outscraper, store in Postgres."
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
    "dateparser>=1.2",
    "psycopg[binary,pool]>=3.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=8.5",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
]

[project.scripts]
gplaces = "gplaces_parser.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
