[project]
name = "mcqs"
version = "0.1.0"
description = "Ingest vrtx-ai/docs-bundle, generate MCQ question banks with Claude, serve over FastAPI."
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=8.5",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
]

[project.scripts]
mcqs = "mcqs.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
